# proto/gen/api/v1/swagger/models/credentials_jwt.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CredentialsJwt credentials jwt
+//
+// swagger:model CredentialsJwt
+type CredentialsJwt struct {
+
+	// sign key
+	SignKey string `json:"sign_key,omitempty"`
+
+	// verify key
+	VerifyKey string `json:"verify_key,omitempty"`
+}
+
+// Validate validates this credentials jwt
+func (m *CredentialsJwt) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this credentials jwt based on context it is used
+func (m *CredentialsJwt) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CredentialsJwt) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CredentialsJwt) UnmarshalBinary(b []byte) error {
+	var res CredentialsJwt
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
